<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity"
    android:background="@color/image_background">



    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/cityContainer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:minHeight="20dp"
        android:maxHeight="150dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_city"
            android:textColor="@color/colorPrimary"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/dayText_1"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:textSize="25sp"
        android:text="@string/today"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/cityContainer"
        />

    <LinearLayout
        android:id="@+id/day_1"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:maxHeight="83dp"
        android:minHeight="20dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayText_1"
        android:background="@drawable/border"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:maxHeight="83dp"
            android:minHeight="20dp"
            android:orientation="vertical"
            android:textColor="@color/textColor"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dayText_2">

            <TextView
                android:id="@+id/clouds1"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                tools:layout_editor_absoluteX="314dp"
                tools:layout_editor_absoluteY="23dp" />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_launcher_foreground" />
        </LinearLayout>

        <TextView
            android:id="@+id/temp1"
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:text="@string/error"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            tools:layout_editor_absoluteX="204dp"
            tools:layout_editor_absoluteY="23dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/dayText_2"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:textSize="25sp"
        android:text="@string/tomorrow"
        android:textColor="@color/textColor"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/day_1"/>

    <LinearLayout
        android:id="@+id/day_2"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:maxHeight="83dp"
        android:minHeight="20dp"
        android:orientation="horizontal"
        android:textColor="@color/textColor"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayText_2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:maxHeight="83dp"
            android:minHeight="20dp"
            android:orientation="vertical"
            android:textColor="@color/textColor"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dayText_2">

            <TextView
                android:id="@+id/clouds2"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                tools:layout_editor_absoluteX="314dp"
                tools:layout_editor_absoluteY="23dp" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_launcher_foreground" />
        </LinearLayout>

        <TextView
            android:id="@+id/temp2"
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:text="@string/error"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/textColor"
            tools:layout_editor_absoluteX="204dp"
            tools:layout_editor_absoluteY="23dp" />



    </LinearLayout>

    <TextView
        android:id="@+id/dayText_3"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:textSize="25sp"
        android:text="@string/day_after_tomorrow"
        android:textColor="@color/textColor"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/day_2"/>

    <LinearLayout
        android:id="@+id/day_3"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:maxHeight="83dp"
        android:minHeight="20dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:textColor="@color/textColor"
        android:background="@drawable/border"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayText_3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:maxHeight="83dp"
            android:minHeight="20dp"
            android:orientation="vertical"
            android:textColor="@color/textColor"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dayText_2">

            <TextView
                android:id="@+id/clouds3"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                tools:layout_editor_absoluteX="314dp"
                tools:layout_editor_absoluteY="23dp" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_launcher_foreground" />
        </LinearLayout>

        <TextView
            android:id="@+id/temp3"
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:text="@string/error"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/textColor"
            tools:layout_editor_absoluteX="204dp"
            tools:layout_editor_absoluteY="23dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/dayText_4"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:textSize="25sp"
        android:text="@string/day_4"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/day_3"/>

    <LinearLayout
        android:id="@+id/day_4"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:maxHeight="83dp"
        android:minHeight="20dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@drawable/border"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayText_4">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:maxHeight="83dp"
            android:minHeight="20dp"
            android:orientation="vertical"
            android:textColor="@color/textColor"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dayText_2">

            <TextView
                android:id="@+id/clouds4"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                tools:layout_editor_absoluteX="314dp"
                tools:layout_editor_absoluteY="23dp" />

            <ImageView
                android:id="@+id/image4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_launcher_foreground" />
        </LinearLayout>

        <TextView
            android:id="@+id/temp4"
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:text="@string/error"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/textColor"
            tools:layout_editor_absoluteX="204dp"
            tools:layout_editor_absoluteY="23dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/dayText_5"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:textSize="25sp"
        android:text="@string/day_5"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/day_4"/>

    <LinearLayout
        android:id="@+id/day_5"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:maxHeight="83dp"
        android:minHeight="20dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@drawable/border"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayText_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:maxHeight="83dp"
            android:minHeight="20dp"
            android:orientation="vertical"
            android:textColor="@color/textColor"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dayText_2">

            <TextView
                android:id="@+id/clouds5"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                tools:layout_editor_absoluteX="314dp"
                tools:layout_editor_absoluteY="23dp" />

            <ImageView
                android:id="@+id/image5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_launcher_foreground" />
        </LinearLayout>

        <TextView
            android:id="@+id/temp5"
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:text="@string/error"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/textColor"
            tools:layout_editor_absoluteX="204dp"
            tools:layout_editor_absoluteY="23dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
